--- a/apps/frontend/config/factories.yml
+++ b/apps/frontend/config/factories.yml
@@ -7,7 +7,14 @@ prod:
     param:
       level:   err
       loggers: ~
-
+  mailer:
+   class: sfMailer
+   param:
+    logging:           %SF_LOGGING_ENABLED%
+    charset:           %SF_CHARSET%
+    delivery_strategy: realtime
+    transport:
+      class: Swift_MailTransport
 test:
   storage:
     class: sfSessionTestStorage
@@ -18,23 +25,26 @@ test:
     class: sfWebResponse
     param:
       send_http_headers: false
-
-  mailer:
-    param:
-      delivery_strategy: none
-
 dev:
   mailer:
     param:
-      delivery_strategy: none
-
+      delivery_strategy: realtime
 all:
-  routing:
-    class: sfPatternRouting
-    param:
-      generate_shortest_url:            true
-      extra_parameters_as_query_string: true
-
+ routing:
+  class: sfPatternRouting
+  param:
+   generate_shortest_url:            true
+   extra_parameters_as_query_string: true
+ storage:
+  class: sfPDOSessionStorage
+  param:
+   session_name: sf_backend         
+   db_table:    session              # Name of the table storing the sessions
+   database:    doctrine               # Name of the database connection to use
+   # Optional parameters
+   db_id_col:   id              # Name of the column storing the session id
+   db_data_col: sessiondata            # Name of the column storing the session data
+   db_time_col: time            # Name of the column storing the session timestamp
   view_cache_manager:
     class: sfViewCacheManager
     param:
