--- a/apps/frontend/config/settings.yml
+++ b/apps/frontend/config/settings.yml
@@ -27,6 +27,7 @@ all:
   # Output escaping settings
   escaping_strategy:      true
   escaping_method:        ESC_SPECIALCHARS
+  i18n: true
   # Enable the database manager
   use_database:           true
   enabled_modules: [default,sfGuardAuth,sfGuardUser,sfApply]
