--- a/plugins/sfForkedDoctrineApplyPlugin/config/app.yml
+++ b/plugins/sfForkedDoctrineApplyPlugin/config/app.yml
@@ -4,7 +4,7 @@ all:
     enabled: false
   sfApplyPlugin:
    from:
-    email: "noreply@chores.com"
+    email: noreply@chores.com
     fullname: "System Administrator"
   sfForkedApply:
     applyForm: sfApplyApplyForm
