updated the backend by creating task management modules

--- a/apps/backend/config/routing.yml
+++ b/apps/backend/config/routing.yml
@@ -1,3 +1,12 @@
+task_assignment:
+  class: sfDoctrineRouteCollection
+  options:
+    model:                TaskAssignment
+    module:               dataAdminJob
+    prefix_path:          /dataAdminJob
+    column:               id
+    with_wildcard_routes: true
+
 # You can find more information about this file on the symfony website:
 # http://www.symfony-project.org/reference/1_4/en/10-Routing
 
