--- a/plugins/sfTCPDFPlugin/config/config_handlers.yml
+++ b/plugins/sfTCPDFPlugin/config/config_handlers.yml
@@ -1,3 +1,6 @@
 config/pdf_configs.yml:
   class: sfTCPDFPluginConfigHandler
   file:  <?php echo realpath(dirname(__FILE__).'/..') ?>/lib/config/sfTCPDFPluginConfigHandler.class.php
+config/invst_configs.yml:
+  class: sfTCPDFPluginConfigHandler
+  file:  <?php echo realpath(dirname(__FILE__).'/..') ?>/lib/config/sfTCPDFPluginConfigHandler.class.php
