--- a/apps/backend/config/routing.yml
+++ b/apps/backend/config/routing.yml
@@ -1,11 +1,11 @@
-eiaTaskAssign:
-  class: sfDoctrineRouteCollection
-  options:
-    model:                EITaskAssignment
-    module:               EiTaskAssign
-    prefix_path:          /eiassign
-    column:               id
-    with_wildcard_routes: true
+#eiaTaskAssign:
+  #class: sfDoctrineRouteCollection
+  #options:
+    #model:                EITaskAssignment
+    #module:               EiTaskAssign
+    #prefix_path:          /eiassign
+    #column:               id
+    #with_wildcard_routes: true
 task_assignment_taskManagement:
   class: sfDoctrineRouteCollection
   options:
