--- a/apps/backend/config/routing.yml
+++ b/apps/backend/config/routing.yml
@@ -37,6 +37,9 @@ start_work:
 make_report: #Route for creating a new Project Summary Report
  url: /make/report
  param: {module: projectSummary, action: new}
+investment_cert_task:
+ url: /certificate/taskAssign
+ param: { module: InvestmentCertTaskAssignment, action: index }
 # You can find more information about this file on the symfony website:
 # http://www.symfony-project.org/reference/1_4/en/10-Routing
 
